hphp/hack/test/typecheck/reified_generics/type_constants_basic.php.like_types.exp
File "type_constants_basic.php", line 13, characters 10-17:
Invalid "as" expression hint (Typing[4195])
File "type_constants_basic.php", line 7, characters 19-24:
The "as" operator cannot be used with a type with an erased generic type argument
